--- a/res/menu/menu_download.xml
+++ b/res/menu/menu_download.xml
@@ -8,5 +8,11 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_sort"/>
+    <item
+        android:id="@+id/action_filter"
+        android:icon="@drawable/ic_action_filter_light"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/action_filter"/>
 
 </menu>
