Initial material design porting.

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="text_color_primary">#FFFFFF</color>
     <color name="window_background">#FFFFFF</color>
     <color name="navigation_bar_color">#AFBFFF</color>
+    <color name="navigation_drawer_color">#F2F2F2</color>
     <color name="ascent_color">#4D73FF</color>
 
     <!-- Action Bar Colors -->
@@ -23,7 +24,6 @@
     <color name="text_color_light">#FFFFFF</color>
     <color name="text_color_dark">#444444</color>
     <color name="text_color_dark_light">#B7B7B7</color>
-    <color name="nav_title_color">#0099CC</color>
     <color name="navigation_spinner_title_color">#FFFFFF</color>
     <color name="dialog_title_background">#8D8D8D</color>
     <color name="dialog_background">#FFFFFF</color>
@@ -44,7 +44,6 @@
     <color name="download_progress">#33B5E5</color>
 
     <!-- Navigation tabs color -->
-
     <color name="navigation_tab_bg">#6FCFF2</color>
     <color name="navigation_bg">#C5E4F0</color>
     <color name="navigation_tab_label_color">#33B5E5</color>
