--- a/res/layout-sw600dp/activity_home.xml
+++ b/res/layout-sw600dp/activity_home.xml
@@ -1,39 +1,45 @@
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/app_background"
-    tools:context="com.milanix.example.downloader.HomeActivity"
-    tools:ignore="MergeRootFrame" >
+    android:background="@color/app_background" >
 
-    <RelativeLayout
+    <include
+        android:id="@+id/toolbar_actionbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="wrap_content"
+        layout="@layout/toolbar_default" />
+
+    <android.support.v4.widget.DrawerLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar_actionbar" >
 
         <FrameLayout
             android:id="@+id/container"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <ImageButton
-            android:id="@+id/download_add"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_margin="20dp"
-            android:background="@drawable/circle_selector"
-            android:padding="10dp"
-            android:src="@drawable/ic_action_add_dark" />
-    </RelativeLayout>
+        <fragment
+            android:id="@+id/navigation_drawer"
+            android:name="com.milanix.example.downloader.navigation.NavigationDrawerFragment"
+            android:layout_width="@dimen/navigation_drawer_width"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            app:layout="@layout/fragment_navdrawer" />
+    </android.support.v4.widget.DrawerLayout>
 
-    <fragment
-        android:id="@+id/navigation_drawer"
-        android:name="com.milanix.example.downloader.navigation.NavigationDrawerFragment"
-        android:layout_width="@dimen/navigation_drawer_width"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        tools:layout="@layout/fragment_navdrawer" />
+    <ImageButton
+        android:id="@+id/download_add"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="20dp"
+        android:background="@drawable/circle_selector"
+        android:padding="10dp"
+        android:src="@drawable/ic_action_add_dark" />
 
-</android.support.v4.widget.DrawerLayout>
+</RelativeLayout>
