--- a/res/layout/activity_home.xml
+++ b/res/layout/activity_home.xml
@@ -1,12 +1,35 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/app_background" >
 
-    <FrameLayout
-        android:id="@+id/container"
+    <include
+        android:id="@+id/toolbar_actionbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        layout="@layout/toolbar_default" />
+
+    <android.support.v4.widget.DrawerLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/drawer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar_actionbar" >
+
+        <FrameLayout
+            android:id="@+id/container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <fragment
+            android:id="@+id/navigation_drawer"
+            android:name="com.milanix.example.downloader.navigation.NavigationDrawerFragment"
+            android:layout_width="@dimen/navigation_drawer_width"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            app:layout="@layout/fragment_navdrawer" />
+    </android.support.v4.widget.DrawerLayout>
 
     <ImageButton
         android:id="@+id/download_add"
@@ -16,6 +39,7 @@
         android:layout_alignParentRight="true"
         android:layout_margin="20dp"
         android:background="@drawable/circle_selector"
+        android:elevation="@dimen/toolbar_elevation"
         android:padding="10dp"
         android:src="@drawable/ic_action_add_dark" />
 
