More of material elements.

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -5,6 +5,7 @@
 
     <!-- Application Core theme. -->
     <style name="DownloaderTheme" parent="AppBaseTheme">
+        <item name="windowActionModeOverlay">true</item>
         <item name="windowActionBar">false</item>
         <item name="colorPrimary">@color/color_primary</item>
         <item name="colorPrimaryDark">@color/color_primary_dark</item>
@@ -12,13 +13,23 @@
         <item name="android:textColorPrimary">@color/text_color_primary</item>
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
         <item name="android:windowBackground">@color/window_background</item>
+        <item name="android:editTextStyle">@style/DownloaderTheme.EditText</item>
     </style>
 
+    <!-- Nav drawer arrow -->
     <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
         <item name="spinBars">true</item>
         <item name="color">@android:color/white</item>
     </style>
 
+    <!-- Dialog -->
+    <style name="DownloaderDialog" parent="Theme.AppCompat.Light.Dialog">
+        <item name="colorPrimary">@color/color_primary</item>
+        <item name="colorPrimaryDark">@color/color_primary_dark</item>
+        <item name="colorAccent">@color/ascent_color</item>
+    </style>
+
+    <!-- Nav drawer item -->
     <style name="navigationdrawer_item">
         <item name="android:textSize">@dimen/navigation_drawer_text_size</item>
         <item name="android:background">@color/navigation_tab_normal</item>
@@ -30,6 +41,7 @@
         <item name="android:drawablePadding">@dimen/navigation_icon_padding</item>
     </style>
 
+    <!-- Nav spinner item -->
     <style name="navigationspinner_item">
         <item name="android:textColor">@color/navigation_spinner_title_color</item>
         <item name="android:textSize">@dimen/navigation_drawer_text_size</item>
@@ -42,10 +54,17 @@
         <item name="android:drawablePadding">@dimen/navigation_icon_padding</item>
     </style>
 
-    <style name="ToolBarStyle" parent="">
+    <!-- Toolbar -->
+    <style name="ToolBarStyle">
         <item name="android:background">@color/color_primary</item>
         <item name="popupTheme">@style/ThemeOverlay.AppCompat.Light</item>
         <item name="theme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>
+    </style>
+
+    <!-- UI components -->
+    <style name="DownloaderTheme.EditText" parent="android:Widget.EditText">
+        <item name="android:textColorHint">@color/text_color_primary_light</item>
+        <item name="android:textColor">@color/text_color_primary_dark</item>
     </style>
 
 </resources>
