--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -8,7 +8,9 @@
     <!-- Material Colors -->
     <color name="color_primary_dark">#4D73FF</color>
     <color name="color_primary">#6889FF</color>
-    <color name="text_color_primary">#FFFFFF</color>
+    <color name="text_color_primary">#8D8D8D</color>
+    <color name="text_color_primary_dark">#000000</color>
+    <color name="text_color_primary_light">#AFAFAF</color>
     <color name="window_background">#FFFFFF</color>
     <color name="navigation_bar_color">#AFBFFF</color>
     <color name="navigation_drawer_color">#F2F2F2</color>
