--- a/res/layout/activity_home.xml
+++ b/res/layout/activity_home.xml
@@ -11,7 +11,6 @@
         layout="@layout/toolbar_default" />
 
     <android.support.v4.widget.DrawerLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -42,5 +41,13 @@
         android:elevation="@dimen/toolbar_elevation"
         android:padding="10dp"
         android:src="@drawable/ic_action_add_dark" />
+
+    <include
+        android:id="@+id/view_rateme"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar_actionbar"
+        android:layout_margin="8dp"
+        layout="@layout/view_floating_rateme" />
 
 </RelativeLayout>
