--- a/res/layout/item_navdrawer.xml
+++ b/res/layout/item_navdrawer.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="48dp" >
+    android:layout_height="48dp"
+    android:background="@drawable/list_selector" >
 
     <TextView
         android:id="@+id/item_name"
@@ -12,7 +13,6 @@
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
-        android:background="@drawable/list_selector"
         android:gravity="center_vertical" />
 
 </LinearLayout>
