--- a/res/values-v21/styles.xml
+++ b/res/values-v21/styles.xml
@@ -17,7 +17,10 @@
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:windowBackground">@color/window_background</item>
+        <item name="android:textViewStyle">@style/DownloaderTheme.TextView</item>
+        <item name="android:checkboxStyle">@style/DownloaderTheme.CheckBox</item>
         <item name="android:editTextStyle">@style/DownloaderTheme.EditText</item>
+        <item name="android:radioButtonStyle">@style/DownloaderTheme.RadioButton</item>
     </style>
 
     <!-- Dialog -->
@@ -43,9 +46,17 @@
     </style>
 
     <!-- UI components -->
+    <style name="DownloaderTheme.TextView" parent="android:Widget.TextView">
+        <item name="android:textColor">@color/text_color_primary</item>
+    </style>
+
+    <style name="DownloaderTheme.CheckBox" parent="android:Widget.CompoundButton.CheckBox">
+        <item name="android:textColor">@color/text_color_primary</item>
+    </style>
+
     <style name="DownloaderTheme.EditText" parent="android:Widget.EditText">
         <item name="android:textColorHint">@color/text_color_primary_light</item>
-        <item name="android:textColor">@color/text_color_primary_dark</item>
+        <item name="android:textColor">@color/text_color_primary</item>
     </style>
 
 </resources>
