--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -13,7 +13,10 @@
         <item name="android:textColorPrimary">@color/text_color_primary</item>
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
         <item name="android:windowBackground">@color/window_background</item>
+        <item name="android:textViewStyle">@style/DownloaderTheme.TextView</item>
+        <item name="android:checkboxStyle">@style/DownloaderTheme.CheckBox</item>
         <item name="android:editTextStyle">@style/DownloaderTheme.EditText</item>
+        <item name="android:radioButtonStyle">@style/DownloaderTheme.RadioButton</item>
     </style>
 
     <!-- Nav drawer arrow -->
@@ -62,9 +65,21 @@
     </style>
 
     <!-- UI components -->
+    <style name="DownloaderTheme.TextView" parent="android:Widget.TextView">
+        <item name="android:textColor">@color/text_color_primary</item>
+    </style>
+
+    <style name="DownloaderTheme.CheckBox" parent="android:Widget.CompoundButton.CheckBox">
+        <item name="android:textColor">@color/text_color_primary</item>
+    </style>
+
     <style name="DownloaderTheme.EditText" parent="android:Widget.EditText">
         <item name="android:textColorHint">@color/text_color_primary_light</item>
-        <item name="android:textColor">@color/text_color_primary_dark</item>
+        <item name="android:textColor">@color/text_color_primary</item>
+    </style>
+
+    <style name="DownloaderTheme.RadioButton" parent="android:Widget.CompoundButton.RadioButton">
+        <item name="android:textColor">@color/text_color_primary</item>
     </style>
 
 </resources>
