--- a/res/layout-sw600dp/activity_home.xml
+++ b/res/layout-sw600dp/activity_home.xml
@@ -10,26 +10,19 @@
         android:layout_height="wrap_content"
         layout="@layout/toolbar_default" />
 
-    <android.support.v4.widget.DrawerLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/drawer_layout"
+    <com.milanix.example.downloader.view.SlidingTabLayout
+        android:id="@+id/sliding_tabs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar_actionbar"
+        android:background="@color/color_primary" />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/toolbar_actionbar" >
-
-        <FrameLayout
-            android:id="@+id/container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <fragment
-            android:id="@+id/navigation_drawer"
-            android:name="com.milanix.example.downloader.navigation.NavigationDrawerFragment"
-            android:layout_width="@dimen/navigation_drawer_width"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            app:layout="@layout/fragment_navdrawer" />
-    </android.support.v4.widget.DrawerLayout>
+        android:layout_below="@+id/sliding_tabs"
+        android:background="@android:color/white" />
 
     <ImageButton
         android:id="@+id/download_add"
@@ -41,5 +34,13 @@
         android:background="@drawable/circle_selector"
         android:padding="10dp"
         android:src="@drawable/ic_action_add_dark" />
+
+    <include
+        android:id="@+id/view_rateme"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toolbar_actionbar"
+        android:layout_margin="8dp"
+        layout="@layout/view_floating_rateme" />
 
 </RelativeLayout>
